src/xml/usuario/usuario.java
/* usuario.java */
/* Generated By:JavaCC: Do not edit this line. usuario.java */
package xml.usuario;
import java.util.ArrayList;
import archivos.usuario.*;

public class usuario implements usuarioConstants {
  private ArrayList<String> lt= new ArrayList<String>();
  private ArrayList<String> lo= new ArrayList<String>();
  private ArrayList<String> lf= new ArrayList<String>();
  private ArrayList<String> lp= new ArrayList<String>();
  private ArrayList<permisos> lista_permisos= new ArrayList<permisos>();
  private ArrayList<user> lista_usuarios= new ArrayList<user>();
  private String nombre_usuario,nombre_bd,pass,tipo,estado;
  private String opcion;

  public static void main(String args[]) throws ParseException {
    usuario parser = new usuario(System.in);
    parser.S();
  }

  final public ArrayList<user> S() throws ParseException {
    USR();
{if ("" != null) return lista_usuarios;}
    throw new Error("Missing return statement in function");
  }

  final public void USR() throws ParseException {Token n; Token p; Token t; Token e;
    jj_consume_token(TOKEN_USR_ABRE);
    jj_consume_token(TOKEN_NOMBRE_ABRE);
    n = jj_consume_token(CADENA);
    jj_consume_token(TOKEN_NOMBRE_CIERRA);
nombre_usuario=n.image;
    jj_consume_token(TOKEN_PASS_ABRE);
    p = jj_consume_token(CADENA);
    jj_consume_token(TOKEN_PASS_CIERRA);
pass=p.image;
    jj_consume_token(TOKEN_TIPO_ABRE);
    t = jj_consume_token(CADENA);
    jj_consume_token(TOKEN_TIPO_CIERRA);
tipo=t.image;
    jj_consume_token(TOKEN_ESTADO_ABRE);
    e = jj_consume_token(CADENA);
    jj_consume_token(TOKEN_ESTADO_CIERRA);
estado=e.image;
    jj_consume_token(TOKEN_PERMISO_ABRE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TOKEN_DB_ABRE:{
      DB();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
nombre_usuario= nombre_usuario.substring(1, nombre_usuario.length()-1);
                    pass= pass.substring(1, pass.length()-1);
                    tipo= tipo.substring(1, tipo.length()-1);
                    estado= estado.substring(1, estado.length()-1);

                    user u= new user(nombre_usuario,pass,tipo,estado,lista_permisos);
                    lista_usuarios.add(u);

                    lista_permisos= new ArrayList<permisos>();
    jj_consume_token(TOKEN_PERMISO_CIERRA);
    jj_consume_token(TOKEN_USR_CIERRA);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TOKEN_USR_ABRE:{
      USR();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
  }

  final public void DB() throws ParseException {Token t;
    jj_consume_token(TOKEN_DB_ABRE);
    jj_consume_token(TOKEN_NOMBRE_ABRE);
    t = jj_consume_token(CADENA);
    jj_consume_token(TOKEN_NOMBRE_CIERRA);
nombre_bd=t.image;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TOKEN_TABLA_ABRE:
    case TOKEN_OBJ_ABRE:
    case TOKEN_FUNC_ABRE:
    case TOKEN_PROC_ABRE:{
      LISTA_OPCION();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
nombre_bd= nombre_bd.substring(1, nombre_bd.length()-1);
                            permisos p= new permisos(nombre_bd,lt,lo,lf,lp);
                            lista_permisos.add(p);
                            lt= new ArrayList<String>();
                            lo= new ArrayList<String>();
                            lf= new ArrayList<String>();
                            lp= new ArrayList<String>();
    jj_consume_token(TOKEN_DB_CIERRA);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TOKEN_DB_ABRE:{
      DB();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
  }

  final public void LISTA_OPCION() throws ParseException {
    OPCION();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TOKEN_TABLA_ABRE:
    case TOKEN_OBJ_ABRE:
    case TOKEN_FUNC_ABRE:
    case TOKEN_PROC_ABRE:{
      LISTA_OPCION();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
  }

  final public void OPCION() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TOKEN_TABLA_ABRE:{
      jj_consume_token(TOKEN_TABLA_ABRE);
      t = jj_consume_token(CADENA);
      jj_consume_token(TOKEN_TABLA_CIERRA);
opcion= t.image;
                                                        opcion= opcion.substring(1, opcion.length()-1);
                                                        lt.add(opcion);
      break;
      }
    case TOKEN_OBJ_ABRE:{
      jj_consume_token(TOKEN_OBJ_ABRE);
      t = jj_consume_token(CADENA);
      jj_consume_token(TOKEN_OBJ_CIERRA);
opcion= t.image;
                                                        opcion= opcion.substring(1, opcion.length()-1);
                                                        lo.add(opcion);
      break;
      }
    case TOKEN_FUNC_ABRE:{
      jj_consume_token(TOKEN_FUNC_ABRE);
      t = jj_consume_token(CADENA);
      jj_consume_token(TOKEN_FUNC_CIERRA);
opcion= t.image;
                                                        opcion= opcion.substring(1, opcion.length()-1);
                                                        lf.add(opcion);
      break;
      }
    case TOKEN_PROC_ABRE:{
      jj_consume_token(TOKEN_PROC_ABRE);
      t = jj_consume_token(CADENA);
      jj_consume_token(TOKEN_PROC_CIERRA);
opcion= t.image;
                                                        opcion= opcion.substring(1, opcion.length()-1);
                                                        lp.add(opcion);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  /** Generated Token Manager. */
  public usuarioTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[6];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x2000,0x2,0x2a8000,0x2000,0x2a8000,0x2a8000,};
   }

  /** Constructor with InputStream. */
  public usuario(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public usuario(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new usuarioTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public usuario(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new usuarioTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public usuario(usuarioTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(usuarioTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[28];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 6; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 28; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
